; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/radio/si4713/extr_radio-platform-si4713.c_radio_si4713_s_modulator.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/radio/si4713/extr_radio-platform-si4713.c_radio_si4713_s_modulator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_modulator = type { i32 }

@tuner = common dso_local global i32 0, align 4
@s_modulator = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_modulator*)* @radio_si4713_s_modulator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @radio_si4713_s_modulator(%struct.file* %0, i8* %1, %struct.v4l2_modulator* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_modulator*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_modulator* %2, %struct.v4l2_modulator** %6, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = call i32 @get_v4l2_dev(%struct.file* %7)
  %9 = load i32, i32* @tuner, align 4
  %10 = load i32, i32* @s_modulator, align 4
  %11 = load %struct.v4l2_modulator*, %struct.v4l2_modulator** %6, align 8
  %12 = call i32 @v4l2_device_call_until_err(i32 %8, i32 0, i32 %9, i32 %10, %struct.v4l2_modulator* %11)
  ret i32 %12
}

declare dso_local i32 @v4l2_device_call_until_err(i32, i32, i32, i32, %struct.v4l2_modulator*) #1

declare dso_local i32 @get_v4l2_dev(%struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
